--- a/causes.css
+++ b/causes.css
@@ -2,9 +2,48 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 150%;
+    color: white;
+
+}
+
+.buttons{
+    border: 1px solid black;
+    background-color: orange;
+    border-radius: 5px
+}
+
 #textboxes {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #FF7F27;
+    width: 100%;
+}
+
+#actualpage {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#fumesimage {
+    width: 500px;
+    height: auto;
+}
+
+#imagedesc1 {
+    text-align: center;
+    width: 500px;
+}
+
+#sunimage {
+    width: 500px;
+    height: auto;
 }
