--- a/quiz.css
+++ b/quiz.css
@@ -15,8 +15,8 @@ h1{
 }
 
 .buttons{
-    border: 1px solid red;
-    background-color: red;
+    border: 1px solid orange;
+    background-color: orange;
     border-radius: 5px
 }
 #logo{
@@ -40,7 +40,7 @@ body {
 }
 
 #logo {
-    height:50px
+    height:150px
 }
 
 #title {
