--- a/style.css
+++ b/style.css
@@ -14,9 +14,14 @@ h1{
     font-family: 'Courier New', Courier, monospace
 }
 
+h2{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .buttons{
-    border: 1px solid red;
-    background-color: red;
+    border: 1px solid orange;
+    background-color: orange;
     border-radius: 5px
 }
 #logo{
